修改查询增加pdflist

--- a/demo/src/main/resources/templates/searchresults.html
+++ b/demo/src/main/resources/templates/searchresults.html
@@ -31,6 +31,7 @@
       <div class="form-group">
         <label for="searchType">Search By</label>
         <select id="searchType" name="searchType" class="form-control" onchange="updateSearchField()">
+          <option value="allkinds">All</option>
           <option value="title">Title</option>
           <option value="isbn">ISBN</option>
           <option value="alternativeTitle">Alternative Title</option>
@@ -56,6 +57,11 @@
       <div class="form-group" id="searchAuthorGroup" style="display: none;">
         <label for="searchAuthor">Author</label>
         <input type="text" id="searchAuthor" class="form-control" placeholder="Enter author">
+      </div>
+
+      <div class="form-group" id="searchAllkindsGroup" style="display: none;">
+        <label for="searchAllkinds">All</label>
+        <input type="text" id="searchAllkinds" class="form-control" placeholder="Enter value">
       </div>
 
       <!-- Existing form groups for other filters -->
@@ -133,12 +139,14 @@
       var searchIsbnGroup = document.getElementById('searchIsbnGroup');
       var searchAlternativeTitleGroup = document.getElementById('searchAlternativeTitleGroup');
       var searchAuthorGroup = document.getElementById('searchAuthorGroup');
+      var searchAllkindsGroup = document.getElementById('searchAllkindsGroup');
 
       // Hide all search fields
       searchTitleGroup.style.display = 'none';
       searchIsbnGroup.style.display = 'none';
       searchAlternativeTitleGroup.style.display = 'none';
       searchAuthorGroup.style.display = 'none';
+      searchAllkindsGroup.style.display = 'none';
 
       // Show the selected search field
       if (searchType === 'title') {
@@ -149,6 +157,8 @@
         searchAlternativeTitleGroup.style.display = 'block';
       }else if (searchType === 'author') {
         searchAuthorGroup.style.display = 'block';
+      }else if (searchType === 'allkinds') {
+        searchAllkindsGroup.style.display = 'block';
       }
     }
 
@@ -159,6 +169,7 @@
       var searchIsbn = document.getElementById('searchIsbn');
       var searchAlternativeTitle = document.getElementById('searchAlternativeTitle');
       var searchAuthor = document.getElementById('searchAuthor');
+      var searchAllkinds = document.getElementById('searchAllkinds');
 
       // Set the value for searchValue based on the selected searchType
       if (searchType === 'title') {
@@ -169,6 +180,8 @@
         searchValueInput.value = searchAlternativeTitle.value;
       }else if (searchType === 'author') {
         searchValueInput.value = searchAuthor.value;
+      }else if (searchType === 'allkinds') {
+        searchValueInput.value = searchAllkinds.value;
       }
     });
 
@@ -238,12 +251,13 @@
                 onclick="showEditModal(this)">edit</button>
       </td>
       <td>
-        <span th:text="${book.loanLabel}">Loan Label</span>
+        <span th:text="${book.loaned}">Loan Label</span>
         <button class="btn btn-link edit-button"
-                th:attr="data-id=${book.id}, data-type='loan', data-value=${book.loanLabel}"
-                onclick="showEditModal(this)">edit</button>
+                th:attr="data-id=${book.id}, data-type='loan', data-value=${book.loaned}"
+                onclick="showLoanEditModal(this)">Edit</button>
       </td>
-      <td th:text="${book.loaned}">Loaned</td>
+
+      <td th:text="${book.loanLabel}">Loaned</td>
       <td>
         <form th:action="@{/test/deleteList/{fileID}(fileID=${book.id})}" method="post" style="display:inline;">
           <input type="hidden" name="title" th:value="${title}">
@@ -298,6 +312,46 @@
       </div>
     </div>
   </div>
+
+  <div class="modal fade" id="loanEditModal" tabindex="-1" aria-labelledby="loanEditModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="loanEditModalLabel">Edit Loan Duration</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form id="loanEditForm" method="post" th:action="@{/test/updateField}">
+            <input type="hidden" id="loanEditId" name="id">
+            <input type="hidden" id="loanEditType" name="editType">
+            <div class="form-group">
+              <label for="loanEditField">Loan Duration (days)</label>
+              <input type="number" class="form-control" id="loanEditField" name="editField">
+            </div>
+            <button type="submit" class="btn btn-primary">Save changes</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    function showLoanEditModal(button) {
+      var id = button.getAttribute('data-id'); // 获取数据ID
+      var type = button.getAttribute('data-type'); // 获取数据类型
+      var value = button.getAttribute('data-value'); // 获取当前值
+
+      $('#loanEditId').val(id); // 将ID设置到隐藏字段
+      $('#loanEditType').val(type); // 将类型设置到隐藏字段
+
+      // Set the current value in the input field
+      $('#loanEditField').val(value); // 将当前值设置到输入字段
+
+      $('#loanEditModal').modal('show'); // 显示模态框
+    }
+  </script>
 
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
