修改adminHome导航栏

--- a/demo/src/main/resources/templates/adminHome.html
+++ b/demo/src/main/resources/templates/adminHome.html
@@ -50,10 +50,13 @@
 </head>
 <body>
 <div class="navbar">
-    <a href="/resourcesLib">Source Databases</a>
+    <a href="/resourcesLib">Databases</a>
     <a href="/adminBorrow">Borrows</a>
-    <a href="/test/search2">Edting Single PDF</a>
-    <a href="/banUser">Ban User</a>
+    <a href="/test/search2">Titles</a>
+    <a href="/test/search2">PDFS</a>
+    <a href="/test/search2">EPUBS</a>
+    <a href="/banUser">Loan Records</a>
+    <a href="/banUser">User Management</a>
 </div>
 
 <div class="container">
