--- a/demo/src/main/resources/templates/searchresults.html
+++ b/demo/src/main/resources/templates/searchresults.html
@@ -286,7 +286,7 @@
   </div>
 
   <!-- 返回搜索页面的链接 -->
-  <a href="/test/searchPage" class="btn btn-secondary mt-3">返回搜索页面</a>
+<!--  <a href="/test/searchPage" class="btn btn-secondary mt-3">返回搜索页面</a>-->
 
   <!-- 模态框 -->
   <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
