--- a/demo/src/main/resources/templates/sourceDatabases.html
+++ b/demo/src/main/resources/templates/sourceDatabases.html
@@ -113,7 +113,10 @@
                     <a th:href="@{/listPDFs(databaseId=${folder.id})}" th:text="${folder.pdfCount}">PDF Count</a>
                 </td>
 <!--                <td th:text="${folder.pdfCount}">PDF Count</td>-->
-                <td th:text="${folder.epubCount}">EPUB Count</td>
+                <td>
+                    <a th:href="@{/listEpubs(databaseId=${folder.id})}" th:text="${folder.epubCount}">EPUB Count</a>
+                </td>
+<!--                <td th:text="${folder.epubCount}">EPUB Count</td>-->
 
                 <td><a class="btn btn-sm btn-primary" data-toggle="modal" data-target="#renameFolderModal"
                        th:data-id="${folder.id}" th:data-name="${folder.name}"
